--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "@twist/babel-plugin-transform",
   "version": "0.1.0",
   "author": "Adobe Systems Inc.",
+  "description": "Transformations for Twist language features",
+  "repository": "https://github.com/adobe/babel-plugin-transform-twist",
   "license": "Apache-2.0",
-  "description": "Transformations for Twist enhancements to React",
   "main": "src/index.js",
   "scripts": {
     "linter": "eslint --ext .js,.jsx .",
