Add nyc for test coverage.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "linter": "eslint --ext .js,.jsx .",
     "updateKnownGoods": "UPDATE_KNOWN_GOODS=1 npm test",
-    "test-fixtures": "mocha test/**/*.js",
+    "test-fixtures": "nyc mocha test/**/*.js",
     "test": "npm run test-fixtures"
   },
   "dependencies": {
@@ -37,6 +37,7 @@
     "eslint": "4.3.0",
     "eslint-plugin-babel": "4.1.2",
     "mocha": "^4.0.1",
+    "nyc": "^11.4.1",
     "react": "^16.0.0",
     "react-test-renderer": "^16.0.0"
   }
