--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "linter": "eslint --ext .js,.jsx .",
     "updateKnownGoods": "UPDATE_KNOWN_GOODS=1 npm test",
     "test-fixtures": "nyc mocha test/**/*.js",
-    "test": "npm run test-fixtures"
+    "test": "npm run test-fixtures",
+    "preversion": "npm run linter && npm run test",
+    "postversion": "git push && git push --tags"
   },
   "dependencies": {
     "babel-core": "^6.26.0",
@@ -40,5 +42,8 @@
     "nyc": "^11.4.1",
     "react": "^16.0.0",
     "react-test-renderer": "^16.0.0"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
